--- a/template.yaml
+++ b/template.yaml
@@ -1,8 +1,3 @@
-# This is the SAM template that represents the architecture of your serverless application
-# https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-sam-template-basics.html
-
-# The AWSTemplateFormatVersion identifies the capabilities of the template
-# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/format-version-structure.html
 AWSTemplateFormatVersion: 2010-09-09
 Description: >-
   auction-service
@@ -13,7 +8,6 @@ Transform:
   - AWS::Serverless-2016-10-31
 
 # Resources declares the AWS resources that you want to include in the stack
-# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
 Resources:
   # This is a Lambda function config associated with the source code: getAuctions.js
   getAuctions:
@@ -26,14 +20,12 @@ Resources:
         - x86_64
       MemorySize: 128
       Timeout: 100
-      Description: A simple example includes a HTTP get method to get all items from a DynamoDB table.
+      Description: HTTP get method to get all items from a DynamoDB table.
       Policies:
-        # Give Create/Read/Update/Delete Permissions to the SampleTable
         - DynamoDBReadPolicy:
             TableName: !Ref AuctionsTable
       Environment:
         Variables:
-          # Make table name accessible as environment variable from function code during execution
           AUCTIONS_TABLE_NAME: !Ref AuctionsTable
       Events:
         Api:
@@ -46,21 +38,19 @@ Resources:
   getAuction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: src/auction.getAuction.getAuction
+      Handler: src/auction/getAuction.getAuction
       FunctionName: getAuction
       Runtime: nodejs14.x
       Architectures:
         - x86_64
       MemorySize: 128
       Timeout: 100
-      Description: A simple example includes a HTTP get method to get one item by id from a DynamoDB table.
+      Description: HTTP get method to get one item by id from a DynamoDB table.
       Policies:
-        # Give Create/Read/Update/Delete Permissions to the SampleTable
         - DynamoDBReadPolicy:
             TableName: !Ref AuctionsTable
       Environment:
         Variables:
-          # Make table name accessible as environment variable from function code during execution
           AUCTIONS_TABLE_NAME: !Ref AuctionsTable
       Events:
         Api:
@@ -80,14 +70,12 @@ Resources:
         - x86_64
       MemorySize: 128
       Timeout: 100
-      Description: A simple example includes a HTTP post method to add one item to a DynamoDB table.
+      Description: HTTP post method to add one item to a DynamoDB table.
       Policies:
-        # Give Create/Read/Update/Delete Permissions to the SampleTable
         - DynamoDBWritePolicy:
             TableName: !Ref AuctionsTable
       Environment:
         Variables:
-          # Make table name accessible as environment variable from function code during execution
           AUCTIONS_TABLE_NAME: !Ref AuctionsTable
       Events:
         Api:
